backstage-manifests/02backstage-deploy.yaml
# kubernetes/backstage.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: kisten/backstage:3.0.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          command:
            - node
          args:
            - packages/backend
            - --config
            - app-config.yaml
            - --config
            - app-config.production.yaml
          volumeMounts:
            - name: backstage-config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
      volumes:
        - name: backstage-config
          configMap:
            name: backstage-config
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 60 }
        - setWeight: 50
        - pause: { duration: 60 }  
# Uncomment if health checks are enabled in your app:
# https://backstage.io/docs/plugins/observability#health-checks
#          readinessProbe:
#            httpGet:
#              port: 7007
#              path: /healthcheck
#          livenessProbe:
#            httpGet:
#              port: 7007
#              path: /healthcheck
